--- a/index.css
+++ b/index.css
@@ -2,8 +2,13 @@
     font-family: 'Roboto Mono', monospace;
 }
 body {
-  background-color: #F4D6CC70;
+  /* background-color: #F2F5EA; */
+  background-image: url("/Users/dducharm/Desktop/portfolio_proj/—Pngtree—delicate tuscany portfolio_1442929.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
   margin: 0;
+  padding: 0;i 
 }
 nav {
     font-size: x-large;
@@ -21,7 +26,7 @@ h1 > a {
 }
 
 h1:hover > a {
-    color: #0A9396;
+    color: #919AA1;
 }
 
 li {
@@ -37,7 +42,13 @@ a, li {
 }
 
 a:hover{
-    color: #BB3E03;
+    color: #919AA1;
+}
+
+#img-index {
+    display: flex;
+    background-size: cover;
+    justify-content: center;
 }
 
 
@@ -54,10 +65,10 @@ footer {
     justify-content: center;
     align-items: center;
     padding: .5em;
+    background-color: #F4D6CC20;
     /* background-image: linear-gradient(#9B222650, #CA670250, #005F7350); */
     background-size: contain;
     margin: 0;
-    position: fixed;
     bottom: 0;
     width: 100%;
     height: 5em;
@@ -86,7 +97,7 @@ h1 {
 
 #exp-container, #edu-container {
     display: flex;
-    justify-content: space-around;
+    /* width: 100%; */
     padding: 1em 10em 6em 10em;
     align-items: center;
     text-align: center;
@@ -101,13 +112,48 @@ h1 {
 }
 
 #home, .education {
-    padding: 1em 50em;
+    /* max-width: 50%; */
+    padding: 1em 5em;
+    background-color: #fbe9e3;
+
 }
 
 .experience {
+    width: 50%;
     padding: 2em 3em;
+    display: flexbox;
+    justify-content: space-around;
+    background-color: #fbe9e3;
+
 }
 
 h4 {
     padding-top: 0%;
+}
+
+/* portfolio */
+#portfolio-layout {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+    padding: 0em 1em;
+}
+.project-image {
+    height: 25em;
+    width: 35em;
+    padding: 2em;
+}
+
+.project-image:hover {
+   image-rendering: pixelated;
+}
+
+#portfolio-h1 {
+    padding: 0em 0em 2em 0em;
+}
+
+.project-info {
+    background-color: #fbe9e3;
 }
