--- a/index.css
+++ b/index.css
@@ -1,15 +1,19 @@
 * {
     font-family: 'Roboto Mono', monospace;
 }
+
 body {
-  /* background-color: #F2F5EA; */
   background-image: url("/Users/dducharm/Desktop/portfolio_proj/—Pngtree—delicate tuscany portfolio_1442929.png");
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
   margin: 0;
-  padding: 0;i 
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
+
 nav {
     font-size: x-large;
     color: #32373B;
@@ -47,14 +51,44 @@ a:hover{
 
 #img-index {
     display: flex;
-    background-size: cover;
+    /* background-size: cover; */
     justify-content: center;
+}
+
+/* /////////home page//////// */
+#index-container {
+    display: flex;
+    flex-direction: column;
+    margin: 10em 10em;
+    text-align: center;
+    padding: 1em;
+    align-items: center;
+    flex-grow: 1;
+}
+
+#home {
+    display: flex;
+    text-align: center;
+    padding: 1em 5em;
+    background-color: #fbe9e3;
+    margin: 5em;
+    width: 40%;
+    border-radius: 2%;
+    border-color: #05769f;
+    border-width: 5%;
+    border-style: dashed;
+}
+
+#name {
+    padding: .5em;
+    background-color: #fbe9e3;
 }
 
 
 #container {
     /* background-color: ; */
     display: flex;
+    justify-content: space-evenly;
     /* flex-direction: column; */
     padding: 1em 6em 6em 6em;
     align-items: center;
@@ -65,7 +99,7 @@ footer {
     justify-content: center;
     align-items: center;
     padding: .5em;
-    background-color: #F4D6CC20;
+    background-color: #F4D6CC40;
     /* background-image: linear-gradient(#9B222650, #CA670250, #005F7350); */
     background-size: contain;
     margin: 0;
@@ -74,57 +108,63 @@ footer {
     height: 5em;
 }
 
-.bio {
-    padding: 2em;
-    width: 100%;
+/*/////////about page//////// */
+.img-home {
+    margin: .25em;
+    border-radius: 10%;
+    width: 30em;
+    height:40em;
 }
 
-#intro {
+.bio {
+    padding: 2em;
+    /* width: 100%; */
+    border-radius: 10%;
+}
+
+#intro, #intro2 {
     text-align: center;
-    width: 60%;
+    background-color: #fbe9e3;
+    margin: 1em;
+    height: 35em;
+    width: 45em;
+    border-radius: 10%;
+    border-color: #ff185f;
+    border-width: 5%;
+    border-style: dashed;
 }
 
 #bio_pic {
-    display: flex;
-    justify-content: center;
+    border-radius: 10%;
 }
 
 h1 {
     text-align: center;
 }
 
-/* experience page */
+/* /////////experience page/////////// */
 
-#exp-container, #edu-container {
+#prim-exp-container {
     display: flex;
+    justify-content: space-around;
     /* width: 100%; */
     padding: 1em 10em 6em 10em;
     align-items: center;
     text-align: center;
 }
 
-#index-container {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    padding: 1em;
-}
 
-#home, .education {
-    /* max-width: 50%; */
-    padding: 1em 5em;
-    background-color: #fbe9e3;
-
-}
-
-.experience {
-    width: 50%;
+.experience, .education {
     padding: 2em 3em;
-    display: flexbox;
-    justify-content: space-around;
+    height: 25em;
+    width: 35em;
     background-color: #fbe9e3;
-
+    margin: 0em 4em;
+    /* border: solid; */
+    border-radius: 10%;
+    border-color: #05769f;
+    border-width: 5%;
+    border-style: dashed;
 }
 
 h4 {
@@ -134,7 +174,7 @@ h4 {
 /* portfolio */
 #portfolio-layout {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
@@ -144,6 +184,8 @@ h4 {
     height: 25em;
     width: 35em;
     padding: 2em;
+    margin: 0em;
+    border-radius: 10%;
 }
 
 .project-image:hover {
@@ -153,7 +195,28 @@ h4 {
 #portfolio-h1 {
     padding: 0em 0em 2em 0em;
 }
-
-.project-info {
-    background-color: #fbe9e3;
+.title > a {
+    color: #fbe9e3;
 }
+.project-info {
+    background-color: #ff185f90;
+    border-radius: 10%;
+    color: #fbe9e3;
+    margin: 1em;
+    font-weight: bolder;
+}
+/* 
+@media only screen and (max-width: 600px) {
+    body {
+     flex-direction: column;
+     flex-wrap: wrap;
+     width: 100%;
+    }
+    .container, .experience, .education {
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    #nav-h1 {
+        display: inline;
+    }
+  } */
