--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: center;
   flex-direction: column;
 }
 
@@ -146,11 +145,12 @@ h1 {
 
 #prim-exp-container {
     display: flex;
-    justify-content: space-around;
-    /* width: 100%; */
-    padding: 1em 10em 6em 10em;
+    justify-content: center;
     align-items: center;
     text-align: center;
+    flex-wrap: wrap;
+    padding: 2em 1em;
+    margin-top: 2em;
 }
 
 
@@ -159,13 +159,15 @@ h1 {
     height: 25em;
     width: 35em;
     background-color: #fbe9e3;
-    margin: 0em 4em;
-    /* border: solid; */
+    margin: 1em 4em;
     border-radius: 10%;
     border-color: #05769f;
     border-width: 5%;
     border-style: dashed;
+    flex-direction: row;
+    font-size: 1.25em;
 }
+
 
 h4 {
     padding-top: 0%;
@@ -196,16 +198,19 @@ h4 {
     padding: 0em 0em 2em 0em;
 }
 .title > a {
-    color: #fbe9e3;
+    /* color: #fbe9e3; */
 }
 .project-info {
-    background-color: #ff185f90;
+    background-color: #fbe9e399;
     border-radius: 10%;
-    color: #fbe9e3;
     margin: 1em;
     font-weight: bolder;
+    border-radius: 10%;
+    border-color: #ff185f;
+    border-width: 5%;
+    border-style: dashed;
 }
-/* 
+
 @media only screen and (max-width: 600px) {
     body {
      flex-direction: column;
@@ -219,4 +224,4 @@ h4 {
     #nav-h1 {
         display: inline;
     }
-  } */
+  }
