updated file path

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url("/Users/dducharm/Desktop/portfolio_proj/—Pngtree—delicate tuscany portfolio_1442929.png");
+  background-image: url("—Pngtree—delicate tuscany portfolio_1442929.png");
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
